force-app/main/default/objects/SVMXC__Picklist_Cache__c/SVMXC__Picklist_Cache__c.object-meta.xml
<CustomObject>
    <description>This is to define Picklist Cache.</description>
    <label>Picklist Cache</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Picklist Cache</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>