force-app/main/default/objects/SVMXC__Picklist_Cache__c/fields/SVMXC__Source_Value__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Source_Value__c</fullName>
    <label>Source Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>