force-app/main/default/objects/SVMXC__Picklist_Cache__c/fields/SVMXC__Target_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Target_Field_API_Name__c</fullName>
    <formula>SVMXC__Target_Field__r.SVMXC__Field_API_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Field API Name</label>
    <type>Text</type>
</CustomField>